# Fantastic-Agents-and-How-to-Build-Them

./: .gitignore  README.md  add_two_nums.json  multiply_two_nums.json  pyproject.toml
src/Tool_JSON_Example/: browserbase_runner.json  run_exa.json  structure_data.json
src/fantastic_agents_and_how_to_build_them/: __init__.py  data_analysis_agent_finished.py  simple_example_finished.py  simple_example_skeleton.py
src/fantastic_agents_and_how_to_build_them/finished_examples/: complex_agent_finished.py  simple_example_finished.py
src/fantastic_agents_and_how_to_build_them/shared/: browserbase.py
src/fantastic_agents_and_how_to_build_them/unfinished_examples/: complex_agent_arch.md  complex_agent_skeleton.py  simple_example_arch.md  simple_example_skeleton.py
