[project]
name = "fantastic-agents-and-how-to-build-them"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ParthSareen", email = "psareen@uwaterloo.ca" }
]
dependencies = [
    "dagent>=0.0.5",
    "playwright>=1.46.0",
    "exa-py>=1.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fantastic_agents_and_how_to_build_them"]
